--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ alvas dept of cse
 </title>
 <body>
 <marquee><h1>welocome to git hub session</h1></marquee>
+  <marquee><h2>ALVAS EDUCATION FOUNDATION</h2></marquee>
 <marquee><h2>HTML project</h2></marquee>
 </body>
 </html>
